pull in tests for concurrent initialization